--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,10 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="FluentNHibernate" Version="3.3.0" />
     <PackageReference Include="NHibernate" Version="5.4.6" />
   </ItemGroup>
 
